// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nightingale-navigation tests it should display the navigation correctly 1`] = `
Object {
  "_axis": Selection {
    "_groups": Array [
      Array [
        <g
          class="x axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
        >
          <path
            class="domain"
            d="M10.5,6V0.5H90.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(10.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(16.214285714285715,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(21.92857142857143,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(27.642857142857142,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(33.357142857142854,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(39.07142857142858,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(44.785714285714285,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              7
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(50.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(56.21428571428571,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              9
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(61.92857142857143,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              10
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(67.64285714285715,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              11
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(73.35714285714285,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              12
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(79.07142857142857,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              13
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(84.78571428571428,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(90.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              15
            </text>
          </g>
        </g>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_brushG": Selection {
    "_groups": Array [
      Array [
        <g
          class="brush"
          fill="none"
          pointer-events="all"
        >
          <rect
            class="overlay"
            cursor="crosshair"
            height="20.4"
            pointer-events="all"
            width="80"
            x="10"
            y="0"
          />
          <rect
            class="selection"
            cursor="move"
            fill="#777"
            fill-opacity="0.3"
            height="20.4"
            shape-rendering="crispEdges"
            stroke="#fff"
            style=""
            width="80"
            x="10"
            y="0"
          />
          <rect
            class="handle handle--w"
            cursor="ew-resize"
            height="26.4"
            style=""
            width="6"
            x="7"
            y="-3"
          />
          <rect
            class="handle handle--e"
            cursor="ew-resize"
            height="26.4"
            style=""
            width="6"
            x="87"
            y="-3"
          />
        </g>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_container": Selection {
    "_groups": Array [
      Array [
        <div
          class="container"
          style="padding: 0px 10px 0px 10px;"
        >
          <svg
            height="40"
            id=""
            width="100"
          >
            <text
              class="start-label"
              x="0"
              y="30"
            >
              1
            </text>
            <text
              class="end-label"
              text-anchor="end"
              x="100"
              y="30"
            >
              15
            </text>
            <g
              class="x axis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
            >
              <path
                class="domain"
                d="M10.5,6V0.5H90.5V6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(10.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  1
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(16.214285714285715,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  2
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(21.92857142857143,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  3
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(27.642857142857142,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  4
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(33.357142857142854,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  5
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(39.07142857142858,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  6
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(44.785714285714285,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  7
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(50.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  8
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(56.21428571428571,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  9
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(61.92857142857143,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  10
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(67.64285714285715,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  11
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(73.35714285714285,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  12
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(79.07142857142857,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  13
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(84.78571428571428,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  14
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(90.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  15
                </text>
              </g>
            </g>
            <g
              class="brush"
              fill="none"
              pointer-events="all"
            >
              <rect
                class="overlay"
                cursor="crosshair"
                height="20.4"
                pointer-events="all"
                width="80"
                x="10"
                y="0"
              />
              <rect
                class="selection"
                cursor="move"
                fill="#777"
                fill-opacity="0.3"
                height="20.4"
                shape-rendering="crispEdges"
                stroke="#fff"
                style=""
                width="80"
                x="10"
                y="0"
              />
              <rect
                class="handle handle--w"
                cursor="ew-resize"
                height="26.4"
                style=""
                width="6"
                x="7"
                y="-3"
              />
              <rect
                class="handle handle--e"
                cursor="ew-resize"
                height="26.4"
                style=""
                width="6"
                x="87"
                y="-3"
              />
            </g>
            <polygon
              class="zoom-polygon"
              fill="#777"
              fill-opacity="0.3"
              points="10,20
        90,20
        100,40
        0,40"
            />
          </svg>
        </div>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_displayend": "15",
  "_displayendLabel": Selection {
    "_groups": Array [
      Array [
        <text
          class="end-label"
          text-anchor="end"
          x="100"
          y="30"
        >
          15
        </text>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_displaystart": "1",
  "_displaystartLabel": Selection {
    "_groups": Array [
      Array [
        <text
          class="start-label"
          x="0"
          y="30"
        >
          1
        </text>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_height": 40,
  "_length": 15,
  "_padding": 10,
  "_rulerstart": 1,
  "_svg": Selection {
    "_groups": Array [
      Array [
        <svg
          height="40"
          id=""
          width="100"
        >
          <text
            class="start-label"
            x="0"
            y="30"
          >
            1
          </text>
          <text
            class="end-label"
            text-anchor="end"
            x="100"
            y="30"
          >
            15
          </text>
          <g
            class="x axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
          >
            <path
              class="domain"
              d="M10.5,6V0.5H90.5V6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(10.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(16.214285714285715,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(21.92857142857143,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(27.642857142857142,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(33.357142857142854,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(39.07142857142858,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                6
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(44.785714285714285,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                7
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(50.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                8
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(56.21428571428571,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                9
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(61.92857142857143,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                10
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(67.64285714285715,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                11
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(73.35714285714285,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                12
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(79.07142857142857,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                13
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(84.78571428571428,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                14
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(90.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                15
              </text>
            </g>
          </g>
          <g
            class="brush"
            fill="none"
            pointer-events="all"
          >
            <rect
              class="overlay"
              cursor="crosshair"
              height="20.4"
              pointer-events="all"
              width="80"
              x="10"
              y="0"
            />
            <rect
              class="selection"
              cursor="move"
              fill="#777"
              fill-opacity="0.3"
              height="20.4"
              shape-rendering="crispEdges"
              stroke="#fff"
              style=""
              width="80"
              x="10"
              y="0"
            />
            <rect
              class="handle handle--w"
              cursor="ew-resize"
              height="26.4"
              style=""
              width="6"
              x="7"
              y="-3"
            />
            <rect
              class="handle handle--e"
              cursor="ew-resize"
              height="26.4"
              style=""
              width="6"
              x="87"
              y="-3"
            />
          </g>
          <polygon
            class="zoom-polygon"
            fill="#777"
            fill-opacity="0.3"
            points="10,20
        90,20
        100,40
        0,40"
          />
        </svg>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_viewport": [Function],
  "_width": 100,
  "_x": [Function],
  "_xAxis": [Function],
  "dontDispatch": false,
  "listenForResize": [Function],
  "margin": Object {
    "bottom": 0,
    "left": 10,
    "right": 10,
    "top": 0,
  },
  "onResize": [Function],
  "polygon": Selection {
    "_groups": Array [
      Array [
        <polygon
          class="zoom-polygon"
          fill="#777"
          fill-opacity="0.3"
          points="10,20
        90,20
        100,40
        0,40"
        />,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  Symbol(SameObject caches): Object {
    "style": CSSStyleDeclaration {
      "0": "display",
      "1": "width",
      "_importants": Object {
        "display": undefined,
        "width": undefined,
      },
      "_length": 2,
      "_onChange": [Function],
      "_values": Object {
        "display": "block",
        "width": "100%",
      },
    },
  },
}
`;

exports[`nightingale-navigation tests it should display the navigation correctly after zoom 1`] = `
Object {
  "_axis": Selection {
    "_groups": Array [
      Array [
        <g
          class="x axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
        >
          <path
            class="domain"
            d="M10.5,6V0.5H90.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(10.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(16.214285714285715,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(21.92857142857143,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(27.642857142857142,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(33.357142857142854,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              5
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(39.07142857142858,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(44.785714285714285,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              7
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(50.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(56.21428571428571,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              9
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(61.92857142857143,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              10
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(67.64285714285715,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              11
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(73.35714285714285,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              12
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(79.07142857142857,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              13
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(84.78571428571428,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              14
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(90.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="9"
            >
              15
            </text>
          </g>
        </g>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_brushG": Selection {
    "_groups": Array [
      Array [
        <g
          class="brush"
          fill="none"
          pointer-events="all"
        >
          <rect
            class="overlay"
            cursor="crosshair"
            height="20.4"
            pointer-events="all"
            width="80"
            x="10"
            y="0"
          />
          <rect
            class="selection"
            cursor="move"
            fill="#777"
            fill-opacity="0.3"
            height="20.4"
            shape-rendering="crispEdges"
            stroke="#fff"
            style=""
            width="11.428571428571427"
            x="15.714285714285715"
            y="0"
          />
          <rect
            class="handle handle--w"
            cursor="ew-resize"
            height="26.4"
            style=""
            width="6"
            x="12.714285714285715"
            y="-3"
          />
          <rect
            class="handle handle--e"
            cursor="ew-resize"
            height="26.4"
            style=""
            width="6"
            x="24.142857142857142"
            y="-3"
          />
        </g>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_container": Selection {
    "_groups": Array [
      Array [
        <div
          class="container"
          style="padding: 0px 10px 0px 10px;"
        >
          <svg
            height="40"
            id=""
            width="100"
          >
            <text
              class="start-label"
              x="0"
              y="30"
            >
              2
            </text>
            <text
              class="end-label"
              text-anchor="end"
              x="100"
              y="30"
            >
              4
            </text>
            <g
              class="x axis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
            >
              <path
                class="domain"
                d="M10.5,6V0.5H90.5V6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(10.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  1
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(16.214285714285715,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  2
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(21.92857142857143,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  3
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(27.642857142857142,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  4
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(33.357142857142854,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  5
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(39.07142857142858,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  6
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(44.785714285714285,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  7
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(50.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  8
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(56.21428571428571,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  9
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(61.92857142857143,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  10
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(67.64285714285715,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  11
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(73.35714285714285,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  12
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(79.07142857142857,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  13
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(84.78571428571428,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  14
                </text>
              </g>
              <g
                class="tick"
                opacity="1"
                transform="translate(90.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  15
                </text>
              </g>
            </g>
            <g
              class="brush"
              fill="none"
              pointer-events="all"
            >
              <rect
                class="overlay"
                cursor="crosshair"
                height="20.4"
                pointer-events="all"
                width="80"
                x="10"
                y="0"
              />
              <rect
                class="selection"
                cursor="move"
                fill="#777"
                fill-opacity="0.3"
                height="20.4"
                shape-rendering="crispEdges"
                stroke="#fff"
                style=""
                width="11.428571428571427"
                x="15.714285714285715"
                y="0"
              />
              <rect
                class="handle handle--w"
                cursor="ew-resize"
                height="26.4"
                style=""
                width="6"
                x="12.714285714285715"
                y="-3"
              />
              <rect
                class="handle handle--e"
                cursor="ew-resize"
                height="26.4"
                style=""
                width="6"
                x="24.142857142857142"
                y="-3"
              />
            </g>
            <polygon
              class="zoom-polygon"
              fill="#777"
              fill-opacity="0.3"
              points="15.714285714285715,20
        27.142857142857142,20
        100,40
        0,40"
            />
          </svg>
        </div>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_displayend": "4",
  "_displayendLabel": Selection {
    "_groups": Array [
      Array [
        <text
          class="end-label"
          text-anchor="end"
          x="100"
          y="30"
        >
          4
        </text>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_displaystart": "2",
  "_displaystartLabel": Selection {
    "_groups": Array [
      Array [
        <text
          class="start-label"
          x="0"
          y="30"
        >
          2
        </text>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_height": 40,
  "_length": 15,
  "_padding": 10,
  "_rulerstart": 1,
  "_svg": Selection {
    "_groups": Array [
      Array [
        <svg
          height="40"
          id=""
          width="100"
        >
          <text
            class="start-label"
            x="0"
            y="30"
          >
            2
          </text>
          <text
            class="end-label"
            text-anchor="end"
            x="100"
            y="30"
          >
            4
          </text>
          <g
            class="x axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
          >
            <path
              class="domain"
              d="M10.5,6V0.5H90.5V6"
              stroke="currentColor"
            />
            <g
              class="tick"
              opacity="1"
              transform="translate(10.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(16.214285714285715,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(21.92857142857143,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(27.642857142857142,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(33.357142857142854,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(39.07142857142858,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                6
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(44.785714285714285,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                7
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(50.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                8
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(56.21428571428571,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                9
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(61.92857142857143,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                10
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(67.64285714285715,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                11
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(73.35714285714285,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                12
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(79.07142857142857,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                13
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(84.78571428571428,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                14
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(90.5,0)"
            >
              <line
                stroke="currentColor"
                y2="6"
              />
              <text
                dy="0.71em"
                fill="currentColor"
                y="9"
              >
                15
              </text>
            </g>
          </g>
          <g
            class="brush"
            fill="none"
            pointer-events="all"
          >
            <rect
              class="overlay"
              cursor="crosshair"
              height="20.4"
              pointer-events="all"
              width="80"
              x="10"
              y="0"
            />
            <rect
              class="selection"
              cursor="move"
              fill="#777"
              fill-opacity="0.3"
              height="20.4"
              shape-rendering="crispEdges"
              stroke="#fff"
              style=""
              width="11.428571428571427"
              x="15.714285714285715"
              y="0"
            />
            <rect
              class="handle handle--w"
              cursor="ew-resize"
              height="26.4"
              style=""
              width="6"
              x="12.714285714285715"
              y="-3"
            />
            <rect
              class="handle handle--e"
              cursor="ew-resize"
              height="26.4"
              style=""
              width="6"
              x="24.142857142857142"
              y="-3"
            />
          </g>
          <polygon
            class="zoom-polygon"
            fill="#777"
            fill-opacity="0.3"
            points="15.714285714285715,20
        27.142857142857142,20
        100,40
        0,40"
          />
        </svg>,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  "_viewport": [Function],
  "_width": 100,
  "_x": [Function],
  "_xAxis": [Function],
  "dontDispatch": false,
  "listenForResize": [Function],
  "margin": Object {
    "bottom": 0,
    "left": 10,
    "right": 10,
    "top": 0,
  },
  "onResize": [Function],
  "polygon": Selection {
    "_groups": Array [
      Array [
        <polygon
          class="zoom-polygon"
          fill="#777"
          fill-opacity="0.3"
          points="15.714285714285715,20
        27.142857142857142,20
        100,40
        0,40"
        />,
      ],
    ],
    "_parents": Array [
      null,
    ],
  },
  Symbol(SameObject caches): Object {
    "style": CSSStyleDeclaration {
      "0": "display",
      "1": "width",
      "_importants": Object {
        "display": undefined,
        "width": undefined,
      },
      "_length": 2,
      "_onChange": [Function],
      "_values": Object {
        "display": "block",
        "width": "100%",
      },
    },
  },
}
`;
